@@ -1,3 +1,9 @@
+2005-12-11  Julien MOUTTE  <julien@moutte.net>
+
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_change_state): 
+	Fixed a leak of the current image reference when cleaning up.
+	Thanks to Arwed von Merkatz (alley_cat) for pointing it out.
+
 2005-12-09  Michael Smith  <msmith@fluendo.com>
 
 	* tools/Makefile.am:
